turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: type mismatch;
 found   : (((Int, Char, Int), (Int, Char, Int)), ((Int, Char, Int), (Int, Char, Int)))
 required: Array[Array[Array[Int]]]
var rule:Array[Array[Array[Int]]] = (((1,'R',0),(1,'R',0)),((0,'N',0),(0,'N',1))) // Change this
                                    ^